[tool.poetry]
name = "masterthesis"
version = "3.10"
description = ""
authors = ["Nils Kaul"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "1.24.0"
pandas = "1.5.3"
matplotlib = "3.6.3"
scipy = "1.9.3"
tensorflow = "2.13"
keras = "2.13.1"
scikit-learn = "1.2.0"
pytz = "2024.1"
tensorflow-io-gcs-filesystem = "0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
